style.css
body {
    background-color: #282E32;
}

* {
    margin: 0;
    padding: 0;
    font-family: 'IBM Plex Mono', monospace;
    color: #9B9B9B;   
    user-select: none;
}

#top{
    width: 100%;
    height: 30vh;
}

#texts{
    position: relative;
    top: 50%;
    transform: translate(0, -50%);
    border-left: 4px solid #60F280;
    padding-left:30px;
}

h1, h2, #name{
    color : #60F280;
}

#briefBio{
    color: #9B9B9B;   
    font-size:20px;
}

.relative-box-centered{
    position: relative;
    left: 50%;
}


#content-container{
    width:50vw;
    max-width:1000px;
    position: relative;
    left:50%;
    transform: translate(-50%, 0);
}

.section{
    margin-top: 150px;
    font-size: 30px;
    margin-bottom: 40px;
    border-left: 4px solid #60F280;
    padding-left:30px;
}
.text{
    padding-left:15px;
    font-size:18px;
}

.tile-content{
    display: inline-flex;
    flex-wrap: wrap;
    position: relative;
    left: 50%;
    transform: translate(-50%, 0);
}
.project-card{
    text-align: center;
    height:500px;
    width: 46%;
    min-width:300px;
    background-color: #22272b;
    border-radius: 7px;
    margin:2%;
    transition-duration: 0.1s;
    border-bottom: 4px solid #22272b;
    overflow:hidden;
    position:relative;
    box-shadow:
    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
    0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
    0 100px 80px rgba(0, 0, 0, 0.12)
}
.project-title{
    text-align: center;
    font-size: 30px;
    font-weight: bolder;
    height: 50%;
    align-items: center;
}
.title-text{
    position: relative;
    width: 90%;
    top:50%;
    left:50%;
    transform: translate(-50%, -50%);
}
.project-card:hover{
    border-bottom: 4px solid #60F280;
    border-radius: 4px 4px 0px 0px;

    transform: translate(10px, -10px) scale(1.01);
    /* transform: scale(1.01); */
}

.project-image{
    position: absolute;
    /* left:50%; */
    left:0;
    top:00%;
    /* transform: translate(-50%,-50%); */
    /* height: 400px; */
    width:100%;
    z-index: 0;
    opacity: 0.2;
}
.project-description {
    position: relative;
    z-index: 10;
    background-color: #22272b;
    width: 100%;
    font-size:18px;
    padding-top:10px;
    /* height: 100%; */
}

.skills {
    margin-top:5%;
}
.link{
    width: 100%;
    height: 40px;
    padding-top: 10%;
    color:whitesmoke;
    font-size: 25px;
    text-decoration: underline;
}

.github{
    font-size:20px;
}

a{
    text-decoration: none;
}
.link-container{
    margin-top:40px;
    margin-bottom:20px;
}

